# yadifa

./: .clang-format  AUTHORS  CMakeLists.txt  COPYING  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  autogen.sh  config.h.in  config.status  configure  configure.ac  do-scan-build  gcovr-build.sh  libtool  stamp-h1  update-version.sh  yadifa-config.h  yadifa-config.h.in  yadifa.supp
etc/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  keys.conf.example  update-version.sh  yadifa.bash_completion  yadifa.conf.example  yadifad-master.conf.example  yadifad-primary.conf.example  yadifad-secondary.conf.example  yadifad-slave.conf.example  yadifad.bash_completion  yadifad.conf  yadifad.conf.example  yadifad.init  yadifad.init.debian  yadifad.init.example  yadifad.init.rhel  yadifad.logrotate  yadifad.service  yadifad.service.arch  yadifad.service.debian  yadifad.service.example  yadifad.service.rhel  yakeyrolld.bash_completion  yakeyrolld.conf.example
lib/dnscore/: CMakeLists.txt  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  config.status  configure  configure.ac  dnscore_config.h.cmake.in  libtool
lib/dnscore/src/: acl-config.c  acl.c  acl_config.c  alarm.c  allocator.c  async.c  base16.c  base32.c  base32hex.c  base64.c  basic-priority-queue.c  basic_priority_queue.c  buffer_input_stream.c  buffer_output_stream.c  buffered-file.c  buffered_file.c  bytearray_input_stream.c  bytearray_output_stream.c  bytezarray_output_stream.c  cache.c  checked_output_stream.c  chroot.c  circular-file.c  circular_file.c  clone_input_output_stream.c  cmdline.c  concat_input_stream.c  config-cmdline.c  config_cmdline.c  config_file_reader.c  config_key.c  config_logger.c  config_settings.c  config_struct.c  counter_output_stream.c  crc32.c  crypto.c  debug.c  debug_bench.c  debug_bfd.c  (+204 more)
lib/dnsdb/: CMakeLists.txt  COPYING  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  config.status  configure  configure.ac  dnsdb_config.h.cmake.in  libtool
lib/dnsdb/src/: avl.c  dictionary.c  dictionary_btree.c  dictionary_htbt.c  dnskey.c  dnssec-keystore.c  dnssec.c  dnssec_keystore.c  dnssec_process.c  dnssec_rsa.c  dynupdate-diff-nochain.c  dynupdate-diff-nsec.c  dynupdate-diff-nsec3.c  dynupdate-diff.c  dynupdate-message.c  dynupdate_check_prerequisites.c  dynupdate_diff.c  dynupdate_diff_nochain.c  dynupdate_diff_nsec.c  dynupdate_diff_nsec3.c  dynupdate_icmtlhook.c  dynupdate_message.c  (+130 more)
lib/dnslg/: CMakeLists.txt  COPYING  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  config.status  configure  configure.ac  dnslg_config.h.cmake.in  libtool
lib/dnszone/: ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  config.status  configure  configure.ac  libtool
lib/glibchooks/: CMakeLists.txt  README
sbin/yadifad/: CMakeLists.txt  COPYING  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  acl.c  acl.h  aclocal.m4  axfr.c  axfr.h  buildinfo.h  check.c  check.h  config-denial.c  config-dnssec-policy.c  config-dnssec-policy.h  config-key-roll-parser.c  config-key-roll-parser.h  config-key-roll.c  config-key-suite.c  config-key-template.c  config-nsid.c  config.h  config.status  config_acl.c  config_acl.h  config_control.c  config_denial.c  config_dnssec_policy.c  config_dnssec_policy.h  config_error.h  config_key_roll.c  config_key_roll_parser.c  config_key_roll_parser.h  config_key_suite.c  config_key_template.c  config_main.c  (+175 more)
sbin/yakeyrolld/: CMakeLists.txt  Makefile.am  Makefile.in  config-dnssec-policy.c  config-dnssec-policy.h  config-key-roll-parser.c  config-key-roll-parser.h  config-key-roll.c  config-key-suite.c  config-key-template.c  config_dnssec_policy.c  config_dnssec_policy.h  config_key_roll.c  config_key_roll_parser.c  config_key_roll_parser.h  config_key_suite.c  config_key_template.c  config_settings.h  date-next.c  date-prev.c  date_next.c  date_prev.c  dnssec-policy.c  dnssec-policy.h  dnssec_policy.c  dnssec_policy.h  keyroll.c  keyroll.h  keyroll_config.h.cmake.in  main.c  rest_server.c  rest_server.h
tests/: CMakeLists.txt  yatest.h
tests/circular-file-test/: Makefile.am  main.c
tests/cjf-scan/: Makefile.am  main.c
tests/cmdline-test/: Makefile.am  main.c
tests/collection-test/: Makefile.am  main.c
tests/daemonised-logger-test/: Makefile.am  main.c
tests/dns-message-test/: CMakeLists.txt  Makefile.am  main.c
tests/dnskey-benchmark/: Makefile.am  main.c
tests/dnssec-test/: Makefile.am  main.c
tests/dsfromkey-test/: CMakeLists.txt  Makefile.am  main.c
tests/ethbenchprobe/: Makefile.am  main.c
tests/file-test/: Makefile.am  main.c
tests/freebsd12-test/: Makefile.am  main.c
tests/hmac-test/: Makefile.am  generate.sh  main.c
tests/ipc-test/: Makefile.am  main.c
tests/journal-from-ixfr/: CMakeLists.txt  Makefile.am  main.c
tests/journal-fusion/: Makefile.am  main.c
tests/journal-speed-test/: CMakeLists.txt  Makefile.am  main.c
tests/keygen-test/: Makefile.am  main.c
tests/limiter-test/: Makefile.am  main.c
tests/message-test/: Makefile.am  main.c
tests/network-interfaces-forall-test/: Makefile.am  main.c
tests/notify-test/: Makefile.am  main.c
tests/nsec3-answer/: Makefile.am  main.c
tests/nsec3-hash/: Makefile.am  main.c
tests/pid-file-test/: CMakeLists.txt  Makefile.am  main.c
tests/protocol-test/: Makefile.am  main.c
tests/query-hammer-test/: Makefile.am  main.c
tests/rndc-test/: Makefile.am  main.c
tests/rrsig-test/: Makefile.am  main.c
tests/shared-circular-buffer-test/: Makefile.am  main.c
tests/shared-heap-test/: Makefile.am  main.c
tests/simple-http-server-test/: Makefile.am  main.c
tests/skeleton/: Makefile.am  main.c
tests/stream-test/: Makefile.am  main.c
tests/tag-gen/: CMakeLists.txt  Makefile.am  main.c
tests/threaded-queue/: CMakeLists.txt  Makefile.am  main.c
tests/udp-echo-test/: Makefile.am  main.c
tests/update-test/: Makefile.am  main.c
tests/zone-save-test/: Makefile.am  main.c
var/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in
(+816 files in other folders)
